--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
   <title>WEALTHOPIA — Order Form</title>
   <style>
     :root{
-      --bg:#0b0f14; --card:#111827; --muted:#9ca3af; --text:#e5e7eb;
-      --line:#1f2937; --accent:#22c55e; --accent2:#38bdf8; --danger:#ef4444;
-      --soft:#0c1220;
+      --bg:#0a0a0a;
+      --card:#121212;
+      --soft:#0f0f0f;
+      --text:#f2f2f2;
+      --muted:#b7b7b7;
+      --line:#2a2a2a;
+
+      --accent:#f2f2f2;   /* mono accent */
+      --accent2:#d9d9d9;  /* secondary mono accent */
+      --danger:#e6e6e6;   /* keep mono */
     }
+
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--text)}
-    header{padding:22px 16px;border-bottom:1px solid var(--line);position:sticky;top:0;background:rgba(11,15,20,.9);backdrop-filter: blur(6px);z-index:10}
+    header{padding:22px 16px;border-bottom:1px solid var(--line);position:sticky;top:0;background:rgba(10,10,10,.92);backdrop-filter: blur(6px);z-index:10}
     .wrap{max-width:1100px;margin:0 auto}
     h1{margin:0;font-size:22px;letter-spacing:.5px}
     .sub{color:var(--muted);margin-top:6px;font-size:13px;line-height:1.45}
@@ -26,7 +34,7 @@
     .panel-b{padding:14px}
     .tabs{display:flex;gap:8px;flex-wrap:wrap}
     .tab{border:1px solid var(--line);background:transparent;color:var(--text);padding:8px 10px;border-radius:999px;cursor:pointer;font-size:12px}
-    .tab[aria-selected="true"]{border-color:rgba(34,197,94,.6);box-shadow:0 0 0 2px rgba(34,197,94,.15) inset}
+    .tab[aria-selected="true"]{border-color:rgba(242,242,242,.65);box-shadow:0 0 0 2px rgba(242,242,242,.12) inset}
     .items{margin-top:12px;display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:10px}
     @media (max-width: 560px){.items{grid-template-columns:1fr}}
     .itembtn{
@@ -43,7 +51,7 @@
       gap:10px;
       transition:transform .05s ease, border-color .15s ease, background .15s ease;
     }
-    .itembtn:hover{border-color:rgba(56,189,248,.55)}
+    .itembtn:hover{border-color:rgba(217,217,217,.7)}
     .itembtn:active{transform:scale(.99)}
     .iname{font-weight:900}
     .iprice{white-space:nowrap;text-align:right}
@@ -51,11 +59,10 @@
     .iprice .h{color:var(--muted);font-size:12px;margin-top:4px}
     .muted{color:var(--muted);font-size:12px}
 
-    /* Selector (appears after clicking an item) */
     .selector{
       margin-top:12px;
       border:1px solid var(--line);
-      background:rgba(34,197,94,.06);
+      background:rgba(255,255,255,.04);
       border-radius:14px;
       padding:12px;
       display:none;
@@ -73,15 +80,26 @@
     textarea{min-height:84px;resize:vertical}
 
     .btn{
-      border:1px solid var(--line);background:var(--soft);color:var(--text);
-      padding:10px 12px;border-radius:12px;cursor:pointer;font-weight:900
+      border:1px solid var(--line);
+      background:var(--soft);
+      color:var(--text);
+      padding:10px 12px;
+      border-radius:12px;
+      cursor:pointer;
+      font-weight:900
     }
-    .btn-primary{background:rgba(34,197,94,.14);border-color:rgba(34,197,94,.55)}
-    .btn-primary:hover{background:rgba(34,197,94,.2)}
-    .btn-danger{background:rgba(239,68,68,.12);border-color:rgba(239,68,68,.55)}
+    .btn-primary{
+      background:rgba(255,255,255,.08);
+      border-color:rgba(255,255,255,.5)
+    }
+    .btn-primary:hover{background:rgba(255,255,255,.12)}
+    .btn-danger{
+      background:rgba(255,255,255,.06);
+      border-color:rgba(255,255,255,.35)
+    }
+    .btn-danger:hover{background:rgba(255,255,255,.1)}
     .btn-ghost{background:transparent}
 
-    /* Cart */
     .cart{display:flex;flex-direction:column;gap:10px}
     .cart-item{border:1px solid var(--line);border-radius:14px;padding:12px;display:grid;grid-template-columns:1fr auto;gap:10px;align-items:center}
     .cart-item .meta{display:flex;flex-direction:column;gap:4px}
@@ -91,8 +109,22 @@
     .totalbox{border-top:1px solid var(--line);margin-top:12px;padding-top:12px;display:grid;gap:8px}
     .kv{display:flex;justify-content:space-between;gap:10px;color:var(--muted);font-size:13px}
     .kv strong{color:var(--text)}
-    .warn{padding:10px 12px;border-radius:12px;border:1px dashed rgba(239,68,68,.6);background:rgba(239,68,68,.07);color:#fecaca;font-size:12px}
-    .ok{padding:10px 12px;border-radius:12px;border:1px dashed rgba(34,197,94,.6);background:rgba(34,197,94,.07);color:#bbf7d0;font-size:12px}
+    .warn{
+      padding:10px 12px;
+      border-radius:12px;
+      border:1px dashed rgba(255,255,255,.45);
+      background:rgba(255,255,255,.05);
+      color:var(--text);
+      font-size:12px
+    }
+    .ok{
+      padding:10px 12px;
+      border-radius:12px;
+      border:1px dashed rgba(255,255,255,.55);
+      background:rgba(255,255,255,.08);
+      color:var(--text);
+      font-size:12px
+    }
     .foot{margin-top:10px;color:var(--muted);font-size:12px;line-height:1.5}
     .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace}
     hr{border:none;border-top:1px solid var(--line);margin:14px 0}
@@ -113,7 +145,6 @@
 <main class="wrap">
   <div class="grid">
 
-    <!-- LEFT: PRODUCT PICKER -->
     <section class="panel">
       <div class="panel-h">
         <h2>Pilih Item</h2>
@@ -124,7 +155,6 @@
 
         <div class="items" id="items"></div>
 
-        <!-- Inline selector after click -->
         <div class="selector" id="selector">
           <div class="sel-top">
             <div>
@@ -152,7 +182,6 @@
       </div>
     </section>
 
-    <!-- RIGHT: CART + CUSTOMER -->
     <aside class="panel">
       <div class="panel-h">
         <h2>Keranjang & Checkout</h2>
@@ -200,14 +229,10 @@
 </main>
 
 <script>
-  // ==============================
-  // CONFIG
-  // ==============================
-  const WA_NUMBER = "6283197962700"; // <-- GANTI jadi nomor WA kamu (tanpa +)
+  const WA_NUMBER = "6283197962700";
   const BRAND = "WEALTHOPIA";
-  const MIN_TOTAL_QTY = 100; // minimal total item seluruh keranjang
+  const MIN_TOTAL_QTY = 100;
 
-  // Harga satuan per 1 item
   const CATALOG = {
     Fruits: [
       { id:"blueberry", label:"🫐 Blueberry", unit:30 },
@@ -217,8 +242,6 @@
     ],
     Mushrooms: [
       { id:"mushroom",  label:"🍄 Mushroom",  unit:25 },
-      // tambah jika perlu:
-      // { id:"oyster", label:"🍄 Oyster", unit:25 },
     ],
     Materials: [
       { id:"stone", label:"🪨 Stone", unit:23 },
@@ -226,19 +249,10 @@
     ],
   };
 
-  // ==============================
-  // STATE
-  // ==============================
-  /** cart: { [id]: {id,label,unit,qty} } */
   const cart = {};
   let activeTab = Object.keys(CATALOG)[0];
-
-  // selector state
   let selectedItem = null;
 
-  // ==============================
-  // HELPERS
-  // ==============================
   const rupiah = (n) => "Rp" + Math.round(n).toLocaleString("id-ID");
 
   function parseQty(v){
@@ -247,9 +261,6 @@
     return Math.floor(n);
   }
 
-  // ==============================
-  // UI ELEMENTS
-  // ==============================
   const tabsEl = document.getElementById("tabs");
   const itemsEl = document.getElementById("items");
 
@@ -268,9 +279,6 @@
   const ruleBox = document.getElementById("ruleBox");
   const okBox = document.getElementById("okBox");
 
-  // ==============================
-  // RENDER
-  // ==============================
   function renderTabs(){
     tabsEl.innerHTML = "";
     Object.keys(CATALOG).forEach((cat)=>{
@@ -323,8 +331,6 @@
     selQtyEl.value = 100;
     selHintEl.textContent = "Masukkan jumlah yang ingin dibeli, lalu klik “Tambah ke Keranjang”.";
     selectorEl.style.display = "grid";
-
-    // scroll sedikit supaya selector terlihat (mobile friendly)
     selectorEl.scrollIntoView({ behavior:"smooth", block:"nearest" });
   }
 
@@ -396,9 +402,6 @@
     recalcTotalsUI();
   }
 
-  // ==============================
-  // CART OPS
-  // ==============================
   function addToCart(item, qty){
     if (!cart[item.id]){
       cart[item.id] = { ...item, qty };
@@ -461,9 +464,6 @@
     renderCart();
   }
 
-  // ==============================
-  // WHATSAPP MESSAGE
-  // ==============================
   function buildWA(){
     const v = validateRules();
     if (!v.ok){
@@ -501,9 +501,6 @@ Mohon konfirmasi antrian & estimasi pengerjaan.`;
     window.open(url, "_blank");
   }
 
-  // ==============================
-  // EVENTS
-  // ==============================
   selCloseBtn.addEventListener("click", hideSelector);
 
   selAddBtn.addEventListener("click", ()=>{
@@ -516,7 +513,6 @@ Mohon konfirmasi antrian & estimasi pengerjaan.`;
     }
     addToCart(selectedItem, q);
 
-    // after add: keep selector open but reset qty (feel free to change)
     selQtyEl.value = 100;
     selHintEl.textContent = "Ditambahkan ke keranjang. Kamu bisa tambah item lain lagi.";
   });
@@ -524,9 +520,6 @@ Mohon konfirmasi antrian & estimasi pengerjaan.`;
   document.getElementById("sendWA").addEventListener("click", buildWA);
   document.getElementById("clearCart").addEventListener("click", clearCart);
 
-  // ==============================
-  // INIT
-  // ==============================
   renderTabs();
   renderItems();
   renderCart();
