--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
   <div class="wrap">
     <h1>WEALTHOPIA — Order Form</h1>
     <div class="sub">
-      Pilih item → akan muncul input qty + tombol “Tambah ke Keranjang”.<br>
-      <strong>Minimal total order: 100 item</strong> (tidak wajib kelipatan 100).
+      Since February 2026 | @HEARTOPLA on Telegram.<br>
     </div>
   </div>
 </header>
