--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <div style="display:grid;gap:10px">
           <div>
             <div class="muted" style="margin-bottom:6px">Nama / Inisial</div>
-            <input id="custName" type="text" placeholder="Contoh: Dini / DJ" />
+            <input id="custName" type="text" placeholder="Contoh: Attara" />
           </div>
           <div>
             <div class="muted" style="margin-bottom:6px">Username Telegram</div>
