--- a/index.html
+++ b/index.html
@@ -262,8 +262,7 @@
   <div class="wrap">
     <h1>WEALTHOPIA — Order Form</h1>
     <div class="sub">
-      Pilih item → akan muncul input qty + tombol “Tambah ke Keranjang”.<br>
-      <strong>Minimal total order: 100 item</strong> (tidak wajib kelipatan 100).
+      Since February 2026 © HEARTOPLA on telegram.<br>
     </div>
   </div>
 </header>
@@ -334,7 +333,7 @@
         <div style="display:grid;gap:10px">
           <div>
             <div class="muted" style="margin-bottom:6px">Nama / Inisial</div>
-            <input id="custName" type="text" placeholder="Contoh: Dini / DJ" />
+            <input id="custName" type="text" placeholder="Contoh: Attara" />
           </div>
           <div>
             <div class="muted" style="margin-bottom:6px">Username Telegram</div>
@@ -359,7 +358,7 @@
             <div style="font-weight:900">Berhasil dikirim.</div>
             <div class="ticket-code mono" id="ticketCode"></div>
 
-            <div class="muted" style="margin-top:10px;margin-bottom:6px">Template (auto-salin):</div>
+            <div class="muted" style="margin-top:10px;margin-bottom:6px">Klik salin ticket & kirim ke @wealthopiabot:</div>
             <div class="ticket-template mono" id="ticketTemplate"></div>
 
             <div class="ticket-actions">
